<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="0dp"
    tools:context="luohao.com.sportmeetv3.activitys.LoginActivity">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:textSize="30dp"
        android:textColor="@color/fontcolor"
        android:background="@color/colorPrimary"
        android:text="@string/title_activity_login"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:hint="输入用户名/学号"
        android:inputType="number"
        android:layout_below="@id/title_login"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:hint="请输入密码"
        android:inputType="textPassword"
        android:layout_below="@id/login_username"/>

    <Button
        android:id="@+id/login_button_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_password"
        android:text="@string/login_button_enter"/>
    <Button
        android:id="@+id/login_button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_button_enter"
        android:text="@string/login_button_reset"/>
    <Button
        android:id="@+id/login_button_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_button_reset"
        android:text="@string/login_button_reg"/>


</RelativeLayout>
